# MailSorter

./: .aiexclude  .dockerignore  .geminiignore  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MailSorter.code-workspace  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  updates.json
.antigravity/: rules.md
.gemini/: config.yaml
.github/: copilot-instructions.md
.github/skills/: README.md
.github/workflows/: ci.yml  lint.yml  release.yml  secret-scan.yml  security-scan.yml
.instructions/: architecture.md  project.index.md  warnings.md
.instructions/contexts/: project.memory.md  project.patterns.md
.instructions/skills/: README.md
.instructions/sub-agents/: README.md
backend/: __version__.py  app_manifest.json  main.py  native_host_entry.py  requirements.txt
backend/core/: __init__.py  attachment_heuristic.py  debug_cb.py  (+9 more)
benchmarks/: README.md  __init__.py  quick_test.py  report_generator.py  runner.py  test_benchmark.py  test_dataset.json
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DESIGN_SYSTEM.md  PHASE4_SUMMARY.md  PLAN_V5.md  QA_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_SIGNING.md  RGPD.md  RGPD_AUDIT.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  VERSIONING.md
extension/: manifest.json
installers/: README.md  install_windows.ps1  register.bat  register.ps1  register.sh
scripts/: build_native_host_windows.ps1  check_secrets.sh  format_branches_wsl.sh  migrate.py  package_xpi.py  setup-venv.ps1  setup-venv.sh  update_manifest.py
tests/: conftest.py  test_config.py  test_imports.py
(+70 files in other folders)
