[tool.poetry]
name = "mail-sorter"
version = "0.1.0"
description = "MailSorter - LLM-driven email sorting (Plan V5)"
authors = ["Romain ROCH <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
jsonschema = "^4.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
ruff = "^0.28.0"
black = "^24.3.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
